--- a/block_tapping_parser/block_tapping_parser/block_tapping_parser.vcxproj.filters
+++ b/block_tapping_parser/block_tapping_parser/block_tapping_parser.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="trial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\better_system_defaults\windows_h.config.hpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="trial.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="common.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
