--- a/block_tapping_parser/block_tapping_parser/block_tapping_parser.vcxproj
+++ b/block_tapping_parser/block_tapping_parser/block_tapping_parser.vcxproj
@@ -197,7 +197,6 @@
     <ClCompile Include="experiment.cpp" />
     <ClCompile Include="session.cpp" />
     <ClCompile Include="common.cpp" />
-    <ClCompile Include="source\better_system_defaults\modern_style_initialization.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="subject.cpp" />
     <ClCompile Include="trial.cpp" />
@@ -223,6 +222,7 @@
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
