Mass debugging.  Safer helper functions.  Breaks near line 'constructing results for:'.

--- a/block_tapping_parser/block_tapping_parser.vcxproj.filters
+++ b/block_tapping_parser/block_tapping_parser.vcxproj.filters
@@ -24,12 +24,42 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="experiment.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="session.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="subject.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="trial.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="block_tapping_parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="experiment.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="session.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="subject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="trial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
