--- a/block_tapping_parser/block_tapping_parser.vcxproj
+++ b/block_tapping_parser/block_tapping_parser.vcxproj
@@ -145,17 +145,27 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
+    <ClInclude Include="experiment.h" />
+    <ClInclude Include="session.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="subject.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="trial.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="block_tapping_parser.cpp" />
+    <ClCompile Include="common.cpp" />
+    <ClCompile Include="experiment.cpp" />
+    <ClCompile Include="session.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="subject.cpp" />
+    <ClCompile Include="trial.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
